--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -49,3 +49,7 @@
   .cp_cssslider input[name='cp_switch']:checked + label + img {
   opacity: 1;
   }
+
+  .product, .prof {
+    background-color: #B3B3B3;
+  }
