--- a/app/assets/stylesheets/_formstyle.scss
+++ b/app/assets/stylesheets/_formstyle.scss
@@ -3,8 +3,11 @@
   font-size:20px;
 }
 form{
-  width:460px;
+  width:550px;
   margin:0 auto;
+  padding-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 .item{
   overflow: hidden;
