--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -52,4 +52,13 @@
 
   .product, .prof {
     background-color: #B3B3B3;
+    padding-top: 60px;
+  }
+
+  .form {
+    margin-top: 20px;
+  }
+
+  .prof {
+    height:700px;
   }
