--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -12,9 +12,7 @@ body {
   }
   #productname {
     color:white;
-  }
-  .product {
-    padding-top: 50px;
+    font-size: 30px;
   }
 
   .cp_modal02 {
@@ -24,7 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.5;
