--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -2,7 +2,8 @@
   display:flex;
   justify-content:space-around;
   margin:0 auto;
-  height:50px;
+  height:100px;
   width:400px;
   padding-top:10px;
+  line-height:90px;
 }
