--- a/app/assets/stylesheets/_formstyle.scss
+++ b/app/assets/stylesheets/_formstyle.scss
@@ -1,62 +1,15 @@
-.lead-form{
-  text-align: center;
-  font-size:20px;
-}
-form{
-  width:550px;
+.form{
+  width:650px;
   margin:0 auto;
   padding-top: 15px;
   margin-bottom: 15px;
   text-align: center;
+  font-size: 20px;
 }
-.item{
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-.label{
-  float: left;
-  margin-right: 20px;
-  width:135px;
-  border-left: solid 3px #e0505d;
-  padding-left: 10px;
-}
-.inputs{
-  float: left;
-  width:300px;
-}
-input[type="text"],input[type="email"]{
-  border: solid 1px #aaa;
-  border-radius:5px;
-  padding:10px;
-  font-size: 15px;
-}
-textarea{
-  border: solid 1px #aaa;
-  border-radius:5px;
-  padding: 10px;
-  height: 160px;
-  font-size: 15px;
-}
-.btn-area{
-  text-align: center;
-}
-input[type="submit"]{
-  background: #e0505c;
-  border: none;
-  color: white;
-  font-size:17px;
-  font-weight:bold;
-  padding: 10px 20px;
-  margin: 0 5px;
-}
-input[type="reset"]{
-  background: #aaa;
-  border: none;
-  color: white;
-  font-size:17px;
-  font-weight:bold;
-  padding: 10px 20px;
-  margin: 0 5px;
+
+.formimage {
+  margin:0 auto;
+  width:500px;
 }
 
 .prof, .product, .skill {
